<resources>

    <string name="app_name">良心撐小店</string>
    <string name="ShopDetailActivity">小店詳情</string>
    <string name="ShopListActivity">尋找小店</string>
    <string name="SubmissionListActivity">小店改動</string>
    <string name="ReviewCreateShopActivity">審核新增小店</string>
    <string name="ReviewUpdateShopActivity">審核小店更改</string>
    <string name="ReviewDeleteShopActivity">審核小店刪除</string>
    <string name="CreateShopActivity">建立小店</string>
    <string name="UpdateShopActivity">更改小店</string>
    <string name="DeleteShopActivity">刪除小店</string>
    <string name="whole_city">全部</string>
    <string name="hk_island">港島</string>
    <string name="kowloon">九龍</string>
    <string name="new_territories">新界</string>
    <string name="nearby">附近</string>
    <string name="search_shop_message">搜尋小店，請輸入地址或關鍵字</string>

    <string-array name="shop_type_display_values">
        <item>請選擇小店類別</item>
        <item>食肆</item>
        <item>零售（食物）</item>
        <item>零售（其他）</item>
        <item>服務</item>
    </string-array>

    <!-- Error messages -->
    <string name="error_title">發生錯誤</string>
    <string name="google_play_service_error_message">此機器無法找到Google Play服務，無法使用定位功能</string>
    <string name="location_service_error_message">無法使用定位服務</string>
    <string name="location_error_message">無法使用定位服務，請打開你的WIFI定位或GPS定位服務</string>
    <string name="network_connection_error_message">網絡問題</string>
    <string name="network_redirection_error_message">網絡問題。\n如果你在使用WIFI，請確定你的WIFI設定正確</string>
    <string name="network_other_error_message">不明錯誤。\n請確定您的軟體為最新版本。\n如問題持續，請把錯誤回報給開發者</string>
    <string name="mandatory_field_error_message"><![CDATA[<field_name>必需填寫]]></string>
    <string name="district_error_message">請選擇地區</string>
    <string name="shop_type_error_message">請選擇小店分類</string>
    <string name="coordinate_error_message">你所提供的小店座標座標不在香港境內</string>
    <string name="self_review_error_message">你不能審核你所提供的小店</string>
    <string name="double_review_error_message">你己經審核過這小店</string>

    <!-- for detail -->
    <string name="address">地址</string>
    <string name="phone">電話</string>
    <string name="open_hours">營業時間</string>
    <string name="edit">更改</string>
    <string name="delete">刪除</string>

    <!-- for main page -->
    <string name="goto_shop_list">尋找小店</string>
    <string name="goto_create_shop">建立小店</string>
    <string name="goto_review_shop_change">評審小店改動</string>
    <string name="about_us">關於本軟體</string>

    <!-- for about us page -->
    <string name="about_us_title">關於良心撐小店</string>
    <string name="about_us_message"><![CDATA[本軟體由Mars’　Potato制作，<br />並以<a href="http://www.gnu.org/licenses/gpl-3.0.txt">GPLv3</a>發佈<br /><br />軟體介面中的部份圖片版權屬於Mars’　Potato，Mars’　Potato保留其使用權<br /><br />軟體介面中的部份圖片版權屬於Ching Ching Tsui，在此感謝准許使用]]></string>

    <!-- for update shop page -->
    <string name="cancel">取消</string>
    <string name="no_information">（沒有資料）</string>

    <!-- for create shop page -->
    <string name="disclaimer"><![CDATA[點擊「確定」按鈕後，表示您同意依據<a href="https://creativecommons.org/licenses/by/3.0/hk/legalcode">CC-3.0</a>授權您的貢獻]]></string>
    
    <string name="shop_name">店名</string>
    <string name="full_desc">詳細介紹</string>
    <string name="short_desc">簡介</string>
    <string name="search_tags">搜尋關鍵字</string>
    <string name="shop_type">小店分類</string>
    <string name="district">地區</string>
    <string name="coordinates">小店座標</string>
    <string name="shop_latitude_hint">緯度</string>
    <string name="shop_longitude_hint">經度</string>
    <string name="shop_name_hint">店名（最多２０字）</string>
    <string name="shop_short_desc_hint">簡介（最多３０字）</string>
    <string name="shop_full_desc_hint">詳細介紹（最多２００字）\n請勿輸入短期資訊，\n例如商品價格，短期促銷活動</string>
    <string name="shop_open_hours_hint">營業時間（最多１００字）</string>
    <string name="shop_search_tags_hint">搜尋關鍵字（最多２００字）\n例如：文具、cafe、酒吧\n這些關鍵字會讓小店更容易被用戶找到</string>
    <string name="shop_phone_hint">電話（最多１０字）</string>
    <string name="shop_address_hint">小店地址（最多１５０字）</string>
    <string name="fill_current_GPS">以目前GPS位置輸入</string>
    <string name="confirm">確定</string>
    <string name="reset">重設</string>
    <string name="success_create_shop">小店資料成功上傳，謝謝</string>

    <!-- for review create shop page -->
    <string name="reject">否決</string>
    <string name="accept">接受</string>
    <string name="success_review">你的評審成功上傳，謝謝</string>
    <string name="select_reject">請選擇否決原因</string>

    <!-- for review update shop page -->
    <string name="old_shop_name">店名（舊）</string>
    <string name="old_full_desc">詳細介紹（舊）</string>
    <string name="old_short_desc">簡介（舊）</string>
    <string name="old_search_tags">搜尋關鍵字（舊）</string>
    <string name="old_shop_type">小店分類（舊）</string>
    <string name="old_district">地區（舊）</string>
    <string name="old_coordinates">小店座標（舊）</string>
    <string name="old_address">地址（舊）</string>
    <string name="old_phone">電話（舊）</string>
    <string name="old_open_hours">營業時間（舊）</string>
    <string name="new_shop_name">店名（新）</string>
    <string name="new_full_desc">詳細介紹（新）</string>
    <string name="new_short_desc">簡介（新）</string>
    <string name="new_search_tags">搜尋關鍵字（新）</string>
    <string name="new_shop_type">小店分類（新）</string>
    <string name="new_district">地區（新）</string>
    <string name="new_coordinates">小店座標（新）</string>
    <string name="new_address">地址（新）</string>
    <string name="new_phone">電話（新）</string>
    <string name="new_open_hours">營業時間（新）</string>

</resources>