<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_bg"
    tools:context=".ShopListActivity" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/whole_city_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/title_pale_grey"
            android:clickable="true"
            android:gravity="center"
            android:onClick="regionFilterAction"
            android:text="@string/whole_city"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/hk_island_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/title_dark_grey"
            android:clickable="true"
            android:gravity="center"
            android:onClick="regionFilterAction"
            android:text="@string/hk_island"
            android:textColor="@color/tab_dim_text_color"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/kowloon_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/title_dark_grey"
            android:clickable="true"
            android:gravity="center"
            android:onClick="regionFilterAction"
            android:text="@string/kowloon"
            android:textColor="@color/tab_dim_text_color"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/new_territories_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/title_dark_grey"
            android:clickable="true"
            android:gravity="center"
            android:onClick="regionFilterAction"
            android:text="@string/new_territories"
            android:textColor="@color/tab_dim_text_color"
            android:textSize="20dp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/title_green"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/transparent_dark"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/search_word"
                android:layout_width="fill_parent"
                android:layout_height="28dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:hint="@string/search_shop_message"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="@android:color/black"
                android:textSize="18dp" >
            </EditText>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:visibility="gone" >

        <Spinner
            android:id="@+id/shop_type_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/transparent_white"
            android:popupBackground="@android:color/white"
            android:spinnerMode="dropdown" />

        <ListView
            android:id="@+id/submission_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/shop_type_spinner"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:divider="@null"
            android:dividerHeight="0dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:background="@color/transparent_pale_white" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</RelativeLayout>