<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_bg"
    tools:context=".CreateShopActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp" >

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_white"
            android:orientation="vertical"
            android:padding="10dp" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp" >

                <TextView
                    android:id="@+id/shop_name_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/shop_name"
                    android:textSize="22dp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/shop_name_caption"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/transparent_dark"
                    android:orientation="vertical"
                    android:padding="1dp" >

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@android:color/white"
                        android:gravity="top|left"
                        android:hint="@string/shop_name_hint"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="18dp" >
                    </EditText>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp" >

                <TextView
                    android:id="@+id/address_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/address"
                    android:textSize="22dp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/address_caption"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/transparent_dark"
                    android:orientation="vertical"
                    android:padding="1dp" >

                    <EditText
                        android:id="@+id/address"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@android:color/white"
                        android:gravity="top|left"
                        android:hint="@string/shop_address_hint"
                        android:inputType="text"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="18dp" >
                    </EditText>
                </RelativeLayout>
            </RelativeLayout>
            
                        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp" >

                <TextView
                    android:id="@+id/phone_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/phone"
                    android:textSize="22dp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/phone_caption"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/transparent_dark"
                    android:orientation="vertical"
                    android:padding="1dp" >

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@android:color/white"
                        android:gravity="top|left"
                        android:hint="@string/shop_name_hint"
                        android:inputType="phone"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:maxLines="1"
                        android:textColor="@android:color/black"
                        android:textSize="18dp" >
                    </EditText>
                </RelativeLayout>
            </RelativeLayout>
            
        </LinearLayout>
    </ScrollView>

</RelativeLayout>