<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_bg"
    tools:context=".ShopDetailActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp" >

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent_white"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/shop_title"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@color/transparent_dark"
                android:gravity="center"
                android:text="shop_title"
                android:textColor="@android:color/white"
                android:textSize="28dp" />

            <ImageView
                android:id="@+id/shop_icon"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/default_shop_icon" />

            <RelativeLayout
                android:id="@+id/address_block"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" >

                <TextView
                    android:id="@+id/address_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/address"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/address_caption"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="70dp"
                    android:layout_marginTop="2dp"
                    android:text="皇后大道中44-46號萬年大廈1樓108-109號舖"
                    android:textSize="18dp" />

                <ImageView
                    android:id="@+id/location_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/location_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/phone_block"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp" >

                <TextView
                    android:id="@+id/phone_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/phone"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/phone_caption"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="70dp"
                    android:layout_marginTop="2dp"
                    android:text="12345678"
                    android:textSize="18dp" />

                <ImageView
                    android:id="@+id/phone_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/phone_icon" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/full_desc_block"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/description_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/full_desc"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/full_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/description_caption"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="2dp"
                    android:text="description_caption"
                    android:textSize="18dp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/open_hours_block"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp" >

                <TextView
                    android:id="@+id/open_hours_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="15dp"
                    android:text="@string/open_hours"
                    android:textSize="22dp" />

                <TextView
                    android:id="@+id/open_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/open_hours_caption"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="2dp"
                    android:text="星期一至五 07:30-23:00\n星期六 08:00-23:00\n星期日 09:00-22:00"
                    android:textSize="18dp" />
            </RelativeLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
					android:id="@+id/edit_button"
                    android:layout_width="121dp"
                    android:layout_height="36.5dp"
                    android:background="@drawable/button_4w"
                    android:onClick="changeAction"
                    android:text="@string/edit"
                    android:textColor="@android:color/white"
                    android:textSize="24dp" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="1dp" />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="121dp"
                    android:layout_height="36.5dp"
                    android:background="@drawable/button_4w_dimmed"
                    android:onClick="changeAction"
                    android:text="@string/delete"
                    android:textColor="@android:color/white"
                    android:textSize="24dp" />
            </LinearLayout>
            
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_pale_white"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

</RelativeLayout>